# OrbitalSim

./: CMakeList  CMakeLists.txt  OrbitalSim.slnx  OrbitalSim.vcxproj  OrbitalSim.vcxproj.filters
.github/workflows/: build.yml
include/: Body.h  Draw.h  Simulation.h  UI.h
src/: Main.cpp
